# amazing_hunting

./: db.sqlite3  pyproject.toml  txt.txt
amazing_hunting/: settings.py  urls.py
vacancies/: views.py
vacancies/migrations/: 0001_initial.py
